--- a/ElectricityMarkets/Pages/Index.razor
+++ b/ElectricityMarkets/Pages/Index.razor
@@ -4,6 +4,7 @@
 
 
 <h2>My First Blazor Project</h2>
+<h6>GitHub Link : <a href="https://github.com/aliemrei/ElectricityMarkets">https://github.com/aliemrei/ElectricityMarkets</a></h6>
 
 <ElectricityMarkets.Components.StdTable ShowFilter="true" TableName="TBL_2021" PageCount="10" CurrentPage="1" OrderBy="[Trade date]" >
 
